--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ pandas>=0.19.2
 scikit-learn>=0.19.1
 scipy>=1.0.0
 nltk==3.4.5
-bokeh
+Jinja2==2.7
+Markupsafe==2.0.1
+bokeh==1.0.4
 umap-learn==0.3.10
